View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022976 | Open CASCADE | OCCT:Application Framework | public | 2012-02-03 12:45 | 2012-03-29 17:26 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022976: A draw-command CopyDF failes to copy content of a label | ||||
Description | A draw-command CopyDF doesn't copy attributes from a label to another label (it does nothing). | ||||
Steps To Reproduce | NewDoc D SetReal D 0:1 1.2345 CopyDF D 0:1 0:2 GetReal D 0:2 attribute not found for entry : 0:2 | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 S7 | ||||
|
Dear Sergey, The bug is fixed. Now it copies the attributes. Revise please my fix of the bug. It is located in 22976. The only modified file is DDF_DataCommands.cxx. Thanks, Vlad |
|
Output of the draw-command now is: NewDoc D SetReal D 0:1 1.2345 CopyDF D 0:1 0:2 GetReal D 0:2 1.2344999999999999 It means the draw-command CopyDF successfully copied a real attribute from the label 0:1 to the label 0:2 |
|
Reviewed. It can be tested. |
|
Dear Vald, Please, recreate the SVN branch. Thanks, Khachatur |
|
Done :-) |
2012-02-17 16:02 developer |
S7 (633 bytes) |
|
Dear BugMaster, Workbench aan-22976-occt was created from SVN branch http://svn/svn/occt/branches/22976 (and aan-22976-products from trunk) compiled and tested on Linux and Windows platforms. Test for this fix is chl 934 S7. It's OK. There are not regressions in aan-22976-products regarding to KAS:dev:products-20120210-opt See results in /QADisk/occttests/results/KAS/dev/aan-22976-products_16022012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120210-opt_10022012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integrated into trunk of occt repository Date: 2012-02-22 11:33:32 +0400 (Wed, 22 Feb 2012) New Revision: 10579 Modified: trunk/src/DDF/DDF_DataCommands.cxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-02-03 12:45 | vro | New Issue | |
2012-02-03 12:45 | vro | Assigned To | => vro |
2012-02-03 13:00 | vro | Note Added: 0019375 | |
2012-02-03 13:00 | vro | Assigned To | vro => szy |
2012-02-03 13:00 | vro | Status | new => resolved |
2012-02-03 13:03 | vro | Note Added: 0019376 | |
2012-02-15 15:15 |
|
Note Added: 0019576 | |
2012-02-15 15:15 |
|
Status | resolved => reviewed |
2012-02-15 16:17 |
|
Assigned To | szy => aan |
2012-02-15 16:59 |
|
Note Added: 0019584 | |
2012-02-15 17:00 |
|
Assigned To | aan => vro |
2012-02-15 17:00 |
|
Status | reviewed => assigned |
2012-02-15 17:34 | vro | Note Added: 0019587 | |
2012-02-17 15:58 |
|
Test case number | => chl 934 S7 |
2012-02-17 16:02 |
|
File Added: S7 | |
2012-02-17 16:34 |
|
Note Added: 0019642 | |
2012-02-17 16:34 |
|
Note Edited: 0019642 | |
2012-02-17 16:35 |
|
Note Edited: 0019642 | |
2012-02-17 16:37 |
|
Status | assigned => feedback |
2012-02-17 16:37 |
|
Status | feedback => tested |
2012-02-22 11:35 | bugmaster | Note Added: 0019717 | |
2012-02-22 11:35 | bugmaster | Status | tested => verified |
2012-02-22 11:35 | bugmaster | Resolution | open => fixed |
2012-03-14 12:31 | bugmaster | Project | Internal => Open CASCADE |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 9f446594 |