0022976: A draw-command CopyDF failes to copy content of a label